# FlowSage

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 1c165b4afcfa_add_calibration_settings_table.py  3769700b545d_add_integrations_api_keys_webhooks.py  4afeed2e2a8c_add_audit_logs.py  5c42e91e976b_add_events_table.py  624fdeacb601_add_workspaces_and_memberships.py  7b07b1ff10ba_encrypt_secret_columns.py  9e3926b19ab0_add_personas_simulation_runs_steps_.py  b9f1af37e8ba_add_users_table.py  d68463a9d9c1_add_persona_memories_and_retraining_jobs.py  e463496b1d0f_backfill_default_workspace.py
backend/src/flowsage_backend/: __init__.py  __main__.py  alerts.py  audit.py  calibration.py  churn.py  config.py  crypto.py  db.py  deps.py  events.py  integrations_store.py  main.py  onboarding.py  rate_limit.py  retraining.py  security.py  seed.py  settings_store.py  simulations.py  url_safety.py  webhooks_store.py  worker.py
backend/src/flowsage_backend/api/: alerts.py  audit.py  auth.py  calibration.py  events.py  exports.py  integrations.py  onboarding.py  personas.py  settings.py  simulations.py  workspaces.py
backend/src/flowsage_backend/integrations/: jira.py  slack.py  webhooks.py
backend/src/flowsage_backend/models/: __init__.py  api_key.py  audit_log.py  calibration.py  event.py  integration.py  persona.py  settings.py  simulation.py  user.py  webhook.py  workspace.py
backend/src/flowsage_backend/resources/: __init__.py
backend/src/flowsage_backend/resources/sample_data/: __init__.py
backend/tests/: conftest.py  test_alerts.py  test_alerts_api.py  test_audit.py  test_audit_api.py  test_audit_models.py  test_audit_wiring.py  test_auth.py  test_calibration.py  test_calibration_api.py  test_churn.py  test_churn_api.py  test_config.py  test_crypto.py  test_events.py  test_exports_api.py  test_health.py  test_integrations_api.py  test_integrations_jira.py  test_integrations_models.py  test_integrations_slack.py  test_node_export_api.py  test_onboarding.py  test_onboarding_api.py  test_personas_api.py  test_rate_limit.py  test_retention_purge.py  test_retraining.py  test_security.py  test_seed.py  test_settings_api.py  test_simulations.py  test_simulations_api.py  test_webhooks.py  test_worker.py  test_workspace_isolation.py  test_workspace_migration.py  test_workspaces_api.py
scripts/flowsage-graph/: Dockerfile  README.md  pyproject.toml
scripts/flowsage-graph/src/flowsage_graph/: __init__.py  cli.py  funnel.py  ingest.py  models.py  viz.py
scripts/flowsage-graph/tests/: test_cli.py  test_funnel.py  test_ingest.py  test_models.py  test_viz.py
scripts/flowsage-predict/: Dockerfile  README.md  pyproject.toml
scripts/flowsage-predict/src/flowsage_predict/: __init__.py  agent.py  cli.py  models.py  personas.py  report.py  vision.py
scripts/flowsage-predict/src/flowsage_predict/baseline_personas/: __init__.py  accessibility_constrained.yaml  low_patience_mobile.yaml  non_native_speaker.yaml  novice.yaml  power_user.yaml
scripts/flowsage-predict/tests/: test_agent.py  test_cli.py  test_models.py  test_personas.py  test_report.py  test_vision.py
(+86 files in other folders)
