[project]
name = "flowsage-backend"
version = "0.1.0"
description = "FlowSage FastAPI backend."
readme = "README.md"
authors = [
    { name = "Ali Razmdideh", email = "ali.97.razmdideh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "argon2-cffi>=23.1,<24.0",
    "pyjwt>=2.9,<3.0",
    "email-validator>=2.2,<3.0",
    "arq>=0.26,<0.27",
    "python-multipart>=0.0.12,<0.1",
    "flowsage-predict",
]

[tool.uv.sources]
flowsage-predict = { workspace = true }

[project.scripts]
flowsage-backend = "flowsage_backend.__main__:main"
flowsage-worker = "flowsage_backend.worker:run_worker"

[dependency-groups]
dev = [
    "autoflake8>=0.4.1,<0.5",
    "black>=24.8,<25.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
    "testcontainers[postgres]>=4.8,<5.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
