[project]
name = "flowsage-graph"
version = "0.1.0"
description = "Event log -> Neo4j journey graph ingestion, funnel discovery, and friction detection."
readme = "README.md"
authors = [
    { name = "Ali Razmdideh", email = "ali.97.razmdideh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.24,<6.0",
    "pydantic>=2.7,<3.0",
]

[project.scripts]
flowsage-graph = "flowsage_graph.cli:main"

[dependency-groups]
dev = [
    "autoflake8>=0.4.1,<0.5",
    "black>=24.8,<25.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
