[project]
name = "flowsage-predict"
version = "0.1.0"
description = "LLM persona agent that walks a screenshot sequence and produces a friction report."
readme = "README.md"
authors = [
    { name = "Ali Razmdideh", email = "ali.97.razmdideh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<0.3",
    "langchain-anthropic>=0.2,<0.3",
    "anthropic>=0.34,<1.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.scripts]
flowsage-predict = "flowsage_predict.cli:main"

[dependency-groups]
dev = [
    "autoflake8>=0.4.1,<0.5",
    "black>=24.8,<25.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "types-pyyaml>=6.0,<7.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
